reformatted all files